[gd_scene load_steps=2 format=3 uid="uid://cvvd782ibpwda"]

[ext_resource type="Script" uid="uid://drho71ttx7bd4" path="res://addons/babylonian/halo/scripts/halo_children_window.gd" id="1_h4l76"]

[node name="HaloChildrenWindow" type="Window"]
position = Vector2i(64, 36)
size = Vector2i(256, 512)
theme_override_colors/title_color = Color(1, 0.501961, 0, 1)
script = ExtResource("1_h4l76")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Select"

[connection signal="empty_clicked" from="VBoxContainer/ItemList" to="." method="_on_item_list_empty_clicked"]
[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
